# Dokkomplekt

./: BASELINE_MANIFEST.json  BASELINE_VERSION.txt  BUILD_TRIGGER.txt  CHANGELOG.md  FIX_REPORT.md  FIX_REPORT_LABS_SAFETY.md  INSTALLER_PREPARATION.md  LAUNCH_CHECKLIST.md  PRODUCT_PRICING_AND_LICENSING.md  PROD_READY_AUDIT_REPORT.md  README.md  REAL_WIZARD_UI_NOTES.md  REGRESSION_CONTOUR.md  REGRESSION_MATRIX.md  REGULATORY_CAUCASUS_NOTES.md  RELEASE_NOTES.md  RUST_LICENSE_ARCHITECTURE.md  USER_BEHAVIOR_CONTRACT.md  WINDOWS_ACCEPTANCE_CHECKLIST.md  actions_creation.py  actions_creation_batch.py  actions_creation_execution.py  actions_creation_foldering.py  actions_creation_maintenance.py  actions_creation_orchestrator.py  actions_creation_preflight.py  actions_diary_flow.py  actions_medical_flow.py  actions_navigation.py  actions_reports.py  actions_required_fields_popup.py  actions_selection.py  actions_template_checks.py  actions_ui_state.py  actions_universal_flow.py  app.py  app_config.py  app_initialization.py  architecture_contracts.py  auditor_layer.py  (+174 more)
.github/workflows/: apply-deep-audit-patch.yml  apply-user-v1492.yml  dispatch-deep-audit-patch.yml  dispatch-polish-scenario-v1492.yml  rust-license.yml  windows-build.yml
compat_layers/: __init__.py
product_access/: __init__.py  core.py  native.py
product_access_native/: __init__.py
rust/: Cargo.toml  README.md
rust/crates/dokkomplekt-license-core/: Cargo.toml
rust/crates/dokkomplekt-license-core/src/: activation.rs  canonical.rs  clock.rs  core_error.rs  crypto.rs  lib.rs  machine.rs  models.rs  policy.rs  revocation.rs  usage.rs
rust/crates/dokkomplekt-license-core/tests/: activation_slots.rs  revocation.rs  signed_license_tamper.rs
rust/crates/dokkomplekt-license-python/: Cargo.toml  pyproject.toml
rust/crates/dokkomplekt-license-python/src/: lib.rs
rust/crates/dokkomplekt-license-server/: Cargo.toml
rust/crates/dokkomplekt-license-server/migrations/: 0001_license_schema.sql  0001_license_server_schema.sql
rust/crates/dokkomplekt-license-server/src/: config.rs  flow_tests.rs  generic_callback.rs  http.rs  http_integration_tests.rs  http_user_flow_tests.rs  issuer.rs  main.rs  memory_store.rs  provider_manual.rs  provider_sbp.rs  provider_yookassa.rs  providers.rs  state.rs  storage.rs  storage_postgres.rs
rust/crates/dokkomplekt-license-server/src/http/: activations.rs  health.rs  license_issue.rs  licenses.rs  orders.rs  webhooks.rs
rust/crates/dokkomplekt-license-server/src/storage/: postgres.rs
rust/crates/dokkomplekt-license-server/tests/: activation_slots_api.rs
rust/tools/: apply_postgres_migration.sh  check_http_storage_async_boundary.sh  check_storage_boundary.sh  format_workspace.sh
tests/: test_architecture_contract_hardening_v1464.py  test_architecture_contract_hardening_v1465.py  test_architecture_diary_report_privacy_v1471.py  test_architecture_domain_boundary_v1466.py  test_architecture_privacy_runtime_locks_v1473.py  test_architecture_runtime_contracts_v1468.py  test_architecture_semantic_date_state_v1467.py  test_architecture_technical_privacy_v1470.py  test_build_check_wiring_v1495.py  test_button_management_popup_values_folder_v1484.py  test_contextual_placeholder_regression_v1481.py  test_contextual_role_disambiguation_v1482.py  test_deep_audit_regressions_v1491.py  test_desktop_intake_folder_reports_v1469.py  test_diary_discovery_logic.py  test_diary_filler_donor_parity_v1490.py  test_diary_manual_date_priority_v1496.py  test_diary_user_emulation_matrix_v1497.py  test_docx_placeholder_camelcase_regression_v1483.py  test_dynamic_required_field_semantics_v1477.py  test_full_ui_contract_popup_dates_v1463.py  test_human_placeholder_role_alias_regression_v1479.py  test_labs_safety_logic.py  test_no_shell_desktop_intake_v1462.py  test_parser_scanner_logic.py  test_points_5_11_logic.py  test_polish_full_scenario_v1492.py  test_primary_document_and_icd10_popup_v1460.py  test_product_access_hardening.py  test_product_access_native_runtime.py  test_product_licensing_contract.py  test_production_interaction_matrix_v1487.py  test_quality_smoke_probe_v1494.py  test_registry_driven_alias_regression_v1480.py  test_regression_contour_baseline_v1486.py  test_regression_state_overlay_v1491.py  test_release_version_and_privacy_v1475.py  test_semantic_alias_regression_v1478.py  test_semantic_date_conflict_v1461.py  test_startup_vbs_encoding_v1472.py  (+7 more)
tools/: run_regression_contour.py
