[project]
name = "medical-diary-autofill"
version = "1.4.89"
description = "Local Windows DOCX medical document and diary autofill utility"
requires-python = ">=3.11,<3.14"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 140
extend-exclude = [
  "build",
  "dist",
  "test_run*",
  ".venv*",
]

[tool.ruff.lint]
# Release gate runs compile, smoke tests and prod_audit.py. Ruff remains focused on syntax/safety rules.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
files = [
  "medical_parser_core.py",
  "universal_scanner.py",
  "diary_template_discovery.py",
  "diary_text_selection.py",
  "icd10_f_search.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff.lint.per-file-ignores]
"smoke_combined_part*.py" = ["F821"]
