[workspace]
resolver = "2"
members = [
    "crates/dokkomplekt-license-core",
    "crates/dokkomplekt-license-server",
]

[workspace.package]
edition = "2021"
license = "Proprietary"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
