[package]
name = "dokkomplekt-license-python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "dokkomplekt_license_native"
path = "src/lib.rs"

[dependencies]
dokkomplekt-license-core = { path = "../dokkomplekt-license-core" }
pyo3.workspace = true
serde_json.workspace = true
time.workspace = true
