[package]
name = "dokkomplekt-license-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
dokkomplekt-license-core = { path = "../dokkomplekt-license-core" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
